# admin_panel

./: .dockerignore  .env.sample  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
docker/etl/: Dockerfile  entrypoint.sh
docker/movies_admin/: Dockerfile  entrypoint.sh
docker/nginx/conf.d/: movies_admin.conf
docker/postgres/: Dockerfile  movies_database.ddl
movies_admin/config/: settings.py  urls.py
movies_admin/config/components/: common.py  database.py  development.py  production.py
movies_admin/movies/: admin.py  apps.py  models.py
movies_admin/movies/api/: urls.py
movies_admin/movies/api/v1/: urls.py  views.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.po
movies_admin/movies/migrations/: 0001_initial.py
movies_admin/sqlite_to_postgres/: extrators.py  load_data.py  models.py  savers.py  settings.py
postgres_to_es/: extractor.py  loader.py  logging_config.py  main.py  models.py  settings.py  state_.py  transformer.py  utils.py
